--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 </button>
                 <div class="collapse navbar-collapse h-auto" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto menu">
-                        <li><a href="index.html" class="page-scroll active"><i class="fas fa-home"></i> Home</a></li>
-                        <li><a href="page/payment-proofs.html" class="page-scroll"><i class="fas fa-money-check-alt"></i> Payment Proofs</a></li>
-                        <li><a href="index.html#features" class="page-scroll">Features</a></li>
-                        <li><a href="index.html#whyjoinus" class="page-scroll">Why join us?</a></li>
-                        <li><a href="index.html#currencies" class="page-scroll">Payment Method</a></li>
-                        <li><a href="page/faq.html" class="page-scroll">FAQ<i class="fas fa-question-circle"></i></a></li>
+                        <li><a href="https://faucetbee.com/" class="page-scroll active"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="https://faucetbee.com/page/payment-proofs" class="page-scroll"><i class="fas fa-money-check-alt"></i> Payment Proofs</a></li>
+                        <li><a href="https://faucetbee.com/#features" class="page-scroll">Features</a></li>
+                        <li><a href="https://faucetbee.com/#whyjoinus" class="page-scroll">Why join us?</a></li>
+                        <li><a href="https://faucetbee.com/#currencies" class="page-scroll">Payment Method</a></li>
+                        <li><a href="https://faucetbee.com/page/faq" class="page-scroll">FAQ<i class="fas fa-question-circle"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                             <div class="action-btns mt-4">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
-                                        <a href="login.html" class="d-flex align-items-center app-download-btn btn btn-info btn-rounded">
+                                        <a href="https://faucetbee.com/login" class="d-flex align-items-center app-download-btn btn btn-info btn-rounded">
                                             <i class="fas fa-sign-in-alt fa-2x"></i>
                                             <div class="download-text text-left">
                                                 <h5 class="mb-0">Login</h5>
@@ -74,7 +74,7 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="register.html" class="d-flex align-items-center app-download-btn btn btn-brand-02 btn-rounded">
+                                        <a href="https://faucetbee.com/register" class="d-flex align-items-center app-download-btn btn btn-brand-02 btn-rounded">
                                             <i class="fas fa-user-plus fa-2x"></i>
                                             <div class="download-text text-left pl-1">
                                                 <h5 class="mb-0">Register</h5>
@@ -311,7 +311,7 @@
             <div class="row">
                 <div class="col-md-6 col-lg-7">
                     <div class="copyright-wrap small-text">
-                        <p class="mb-0">&copy 2021 <a href="index.html">Faucet Bee</a></p>
+                        <p class="mb-0">&copy 2021 <a href="https://faucetbee.com/">Faucet Bee</a></p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-5">
