--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg fixed-top bg-transparent">
             <div class="container">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="https://faucetbee.com/">
                     <img src="assets/images/logo.png" alt="logo" class="img-fluid" style="max-width: 50px;" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
