--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
                 <div class="col-md-6 col-lg-5">
                     <div class="terms-policy-wrap text-lg-right text-md-right text-left">
                         <ul class="list-inline">
-                            <li class="list-inline-item"><a class="small-text" href="page/terms-of-service.html">Terms</a></li>
-                            <li class="list-inline-item"><a class="small-text" href="page/privacy-policy.html">Privacy Policy</a></li>
+                            <li class="list-inline-item"><a class="small-text" href="https://faucetbee.com/page/terms-of-service">Terms</a></li>
+                            <li class="list-inline-item"><a class="small-text" href="https://faucetbee.com/page/privacy-policy">Privacy Policy</a></li>
                         </ul>
                     </div>
                 </div>
