--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
         </section>
     </div>
     <footer class="footer-1 gradient-bg ptb-60">
+<center><iframe data-aa="1686242" src="//ad.a-ads.com/1686242?size=728x90" scrolling="no" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe></center>
         <div class="container">
         </div>
     </footer>
